# uq-detr

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
docs/: getting-started.md  index.md
docs/examples/: coco.md  huggingface.md
docs/metrics/: contrastive-conf.md  dece.md  laece.md  lrp.md  oce.md  overview.md
docs/utilities/: box-convert.md  hungarian.md  postprocess.md
examples/coco/: index.html
examples/huggingface/: index.html
getting-started/: index.html
metrics/contrastive-conf/: index.html
metrics/dece/: index.html
metrics/laece/: index.html
metrics/lrp/: index.html
metrics/oce/: index.html
metrics/overview/: index.html
search/: search_index.json
src/uq_detr/: __init__.py  _box_utils.py  _matching.py  _types.py  postprocess.py
src/uq_detr/imreli/: __init__.py  contrastive.py
src/uq_detr/metrics/: __init__.py  dece.py  laece.py  lrp.py  oce.py
tests/: test_hungarian.py  test_metrics.py
utilities/box-convert/: index.html
utilities/hungarian/: index.html
utilities/postprocess/: index.html
